--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -47,7 +47,20 @@
     <q>Lorem ipsum dolor sit, amet consectetur adipisicing.</q>
     <blockquote>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero repudiandae quos saepe dolores labore odio voluptatem neque quas qui. Quisquam, esse consequatur. Quasi voluptates similique maxime est labore asperiores dignissimos!</blockquote>
 
-
+    <p>
+        <pre>        
+        Lorem 
+        ipsum 
+        dolor 
+        sit 
+        amet.
+    </pre>
+    </p>
+    <p>Lorem.</p>
+    <p>Eos.</p>
+    <p>Blanditiis.</p>
+    <p>Natus.</p>
+    <p>Odio.</p>
 
 </body>
 </html>
