--- a/06_menu/index.html
+++ b/06_menu/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
+
     <link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -23,7 +25,7 @@
         <li><a href="">Link 1</a></li>
         <li><a href="">Link 2</a></li>
         <li><a href="">Link 3</a></li>
-        <li><a href="">Link 4</a></li>
+        <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
     </ul>
 </body>
 
