--- a/07_animation/index.html
+++ b/07_animation/index.html
@@ -47,7 +47,12 @@
         <img src="https://arthive.com/res/media/img/oy800/work/91c/53388@2x.jpg" alt="">
         <img src="https://arthive.com/res/media/img/oy800/work/91c/53388@2x.jpg" alt="">
     </div> -->
-<div class="circle"></div>
+<div class="circle">
+    
+</div>
+<div class="text">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus quam omnis soluta accusamus consequatur officiis maiores aut beatae ipsa cupiditate error a quas sint facere tempore recusandae, voluptas, dolore unde.
+</div>
 </body>
 
 </html>
